Second round of edits to methods and results.

--- a/ref.bib
+++ b/ref.bib
@@ -97,12 +97,26 @@
   doi={10.1579/0044-7447(2007)36[622:ITIMTT]2.0.CO;2}
 }
 
+@unpublished{gephart2016,
+  title={Vulnerability to shocks in the global seafood trade network},
+  author={Gephart, Jessica A and Brännströmm Åke and Rovenskaya, Elena and Dieckmann, Ulf and Pace, Michael L},
+  year={in revision}
+}
+
 @book{hoekstra2008,
   title={Globalization of water: Sharing the planet's freshwater resources},
   author={Hoekstra, Arjen Y and Chapagain, Ashok K},
   year={2008},
   publisher={Wiley Blackwell},
   address={Malden, MA}
+}
+
+@manual{kao2015,
+    title = {FAOSTAT: Download Data from the FAOSTAT Database of the Food and Agricultural
+Organization (FAO) of the United Nations},
+    author = {Michael C. J. Kao and Markus Gesmann and Filippo Gheri},
+    year = {2015},
+    note = {R package version 2.0}
 }
 
 @article{lee2011,
@@ -185,6 +199,15 @@
   doi={10.1088/1748-9326/10/2/024007}
 }
 
+@manual{r2015,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2015},
+  url = {http://www.R-project.org/},
+}
+
 @article{rice2007,
   title={Ecological unequal exchange: Consumption, equity, and unsustainable structural relationships within the global economy},
   author={Rice, James},
@@ -260,8 +283,7 @@
   author={Tamea, Stefania and Laio, Francesco and Ridolfi, Luca},
   journal={Scientific Reports},
   publisher={Nature Publishing Group},
-  note={In Press},
-  year={2016}
+  year={in press}
 }
 
 @article{weinzettel2013,
